fixed lightbox back button

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ html {
 	bottom: 40px;
 	right: 40px;
 	background-color: #1fab52;
-	color: #fff;
+	color: #f4f3f3;
 	border-radius: 50px;
 	text-align: center;
 	font-size: 30px;
