--- a/src/index.css
+++ b/src/index.css
@@ -3,27 +3,27 @@
 @tailwind utilities;
 
 html::-webkit-scrollbar {
-	width: 10px;
+	width: 9px;
 }
 
 html::-webkit-scrollbar-track {
 	background: rgb(179, 177, 177);
-	border-radius: 10px;
+	border-radius: 9px;
 }
 
 html::-webkit-scrollbar-thumb {
 	background: rgb(136, 136, 136);
-	border-radius: 10px;
+	border-radius: 9px;
 }
 
 html::-webkit-scrollbar-thumb:hover {
 	background: rgb(100, 100, 100);
-	border-radius: 10px;
+	border-radius: 9px;
 }
 
 html::-webkit-scrollbar-thumb:active {
 	background: rgb(68, 68, 68);
-	border-radius: 10px;
+	border-radius: 9px;
 }
 
 html {
@@ -81,19 +81,10 @@ html {
 	transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
 
-/* Navbar  links style */
-.link {
-	transition: ease-in-out;
-	transition-duration: 300ms;
-}
-:hover.link {
-	color: #7c0002ff;
-}
-
 .active {
 	text-decoration: solid underline rgb(124 0 2 / 0.8) 3px;
 
-	text-underline-offset: 36px;
+	text-underline-offset: 32px;
 }
 
 @media screen and (max-width: 976px) {
@@ -111,8 +102,8 @@ html {
 	position: fixed;
 	width: 60px;
 	height: 60px;
-	bottom: 40px;
-	right: 40px;
+	bottom: 25px;
+	right: 30px;
 	background-color: #1fab52;
 	color: #f4f3f3;
 	border-radius: 50px;
@@ -139,4 +130,115 @@ html {
 		right: 10px;
 		font-size: 22px;
 	}
+}
+
+/* dark navbar  links style */
+
+.dark-link {
+	background-image: linear-gradient(
+		to right,
+		#7c0002ff,
+		#e4e6eb 50%,
+		#ffffff 50%
+	);
+	background-size: 200% 100%;
+	background-position: -100%;
+	display: inline-block;
+
+	padding: 1px 0;
+	position: relative;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: all 0.4s ease-in-out;
+}
+
+.dark-link:before {
+	content: "";
+	background: #c7d0d4;
+	display: block;
+	position: absolute;
+	bottom: -28px;
+	left: 0;
+	width: 0;
+	height: 3px;
+	transition: all 0.4s ease-in-out;
+}
+
+.dark-link:hover {
+	background-position: 0;
+}
+
+.dark-link:hover::before {
+	width: 100%;
+}
+
+/*  navbar links style */
+.link {
+	background-image: linear-gradient(
+		to right,
+		#7c0002ff,
+		#716e6e 50%,
+		#000000 50%
+	);
+	background-size: 200% 100%;
+	background-position: -100%;
+	display: inline-block;
+	padding: 1px 0;
+	position: relative;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: all 0.4s ease-in-out;
+}
+
+.link:before {
+	content: "";
+	background: #7c0002ff;
+	display: block;
+	position: absolute;
+	bottom: -29px;
+	left: 0;
+	width: 0;
+	height: 3px;
+	transition: all 0.4s ease-in-out;
+}
+
+.link:hover {
+	background-position: 0;
+}
+
+.link:hover::before {
+	width: 100%;
+}
+
+/* footer links style */
+.footer-link {
+	background-image: linear-gradient(to right, #fff, #716e6e 50%, #fff 50%);
+	background-size: 200% 100%;
+	background-position: -100%;
+	display: inline-block;
+	padding: 1px 0;
+	position: relative;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: all 0.4s ease-in-out;
+}
+
+.footer-link:before {
+	content: "";
+	background: rgb(234, 229, 229);
+	display: block;
+	position: absolute;
+	bottom: -2px;
+	left: 0;
+	width: 0;
+	height: 2px;
+	transition: all 0.4s ease-in-out;
+}
+
+.footer-link:hover {
+	background-position: 0;
+}
+
+.footer-link:hover::before {
+	width: 100%;
 }
